Bug 432759 - Artifacts when upscaling a VNC session
Summary: Artifacts when upscaling a VNC session
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: VNC (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-10 20:11 UTC by Cédric Brégardis
Modified: 2021-03-13 17:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
image with artifacts (203.27 KB, image/jpeg)
2021-02-10 20:14 UTC, Cédric Brégardis
Details
no artifacts with patch (222.16 KB, image/jpeg)
2021-02-10 20:14 UTC, Cédric Brégardis
Details
patch fixing artifacts (931 bytes, patch)
2021-02-10 20:16 UTC, Cédric Brégardis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cédric Brégardis 2021-02-10 20:11:49 UTC
There are artifacts when upscaling a VNC session.


STEPS TO REPRODUCE
1. Start a VNC session with krdc. The remote desktop has a resolution of 1920x1080. The screen on which krdc is running has a resolution of 4k. The VNC server can be krfb or tightvnc.
2. Maximize the krdc window and activate the upscaling (button Scale)


OBSERVED RESULT
Graphical artifacts sometimes appear on the screen. It seams to corresponds to the edges of the part of the image which are refreshed. See the attachment krdc_with_artifacts.jpg.

I have made a patch which fixes the problem. See attachment krdc_with_patch.jpg for the result with the patch. The patch is attached and also available at: 

EXPECTED RESULT

No artifacts.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version:  5.20.5
KDE Frameworks Version: 5.78.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Cédric Brégardis 2021-02-10 20:14:28 UTC
Created attachment 135572 [details]
image with artifacts
Comment 2 Cédric Brégardis 2021-02-10 20:14:55 UTC
Created attachment 135573 [details]
no artifacts with patch
Comment 3 Cédric Brégardis 2021-02-10 20:16:19 UTC
Created attachment 135574 [details]
patch fixing artifacts
Comment 4 Albert Astals Cid 2021-02-10 23:37:50 UTC
Could you please create a Merge Request against https://invent.kde.org/network/krdc ?
Comment 5 Bug Janitor Service 2021-02-12 14:01:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/10
Comment 6 Albert Astals Cid 2021-03-13 17:49:21 UTC
Git commit 0d2fd365b4482b1c167feac09adf0f06f870e347 by Albert Astals Cid, on behalf of Cedric Bregardis.
Committed on 13/03/2021 at 17:49.
Pushed by aacid into branch 'master'.

Fix upscaling artifacts in VncView

Edges of updated regions are not correctly painted when upscaling a
VNC session. Increasing the updated rectangle by one pixel fixes the
problem.

M  +1    -1    vnc/vncview.cpp

https://invent.kde.org/network/krdc/commit/0d2fd365b4482b1c167feac09adf0f06f870e347