Fix upscaling artifacts in VncView

Edges of updated regions are not correctly painted when upscaling a
VNC session. Increasing the updated rectangle by one pixel fixes the
problem.

BUG: 432759